third_party/move/tools/move-decompiler/tests/compiler-v2-test/checking-lang-v2.2/lambda/inline-parity/bug_10991_noparam2.exp
module 0x42::Test {
    fun foo(f: |u64|(u64), g: |u64|(u64), x: u64, _: u64): u64 {
        f(x) + g(x)
    }
    public fun test() {
        if (!(foo(|arg0| __lambda__1__test(arg0), |arg0| __lambda__2__test(arg0), 10, 100) == 13)) abort 0;
    }
    fun __lambda__1__test(param$0: u64): u64 {
        3
    }
    fun __lambda__2__test(param$0: u64): u64 {
        10
    }
}

--- unable to recompile the decompiled code:
exiting with context checking errors
error: invalid character
  ┌─ bug_10991_noparam2.move:8:32
  │
8 │     fun __lambda__1__test(param$0: u64): u64 {
  │                                ^ Invalid character: `$`
